test(download): 리팩토링 반영해 의존성/리졸버/임시파일로 단위테스트 수정